@@ -1,3 +1,9 @@
+2009-07-20  Chris Toshok  <toshok@ximian.com>
+
+	* plugin-class.cpp (MoonlightDependencyObjectObject::Invoke): add
+	the fallback findName lookup here, since we removed it from
+	DependencyObject::FindName.
+
 2009-07-18  Jackson Harper  <jackson@ximian.com>
 
 	* plugin-class.cpp:
